refactor: 代码异味清理与架构优化
- 将 Notifier 接口改为返回 CompletableFuture 以支持异步发送
- 移除各处的 new QQNotifier 并采用单例获取 (ServerHelperMod.getNotifier())
- 将 ServerBot 中的匿名 Connection 提取为独立的 DummyConnection 类
- 将 MenuSession 的会话管理职责分离至 MenuSessionManager 类
- 修复 WSClient 中重连和超时处理的线程安全问题
- 规范全局变量命名（如 TF -> TIME_FORMATTER, ec -> eventConfig, 等）以达到望文生义
- 统一使用虚拟线程 Thread.ofVirtual() 替代原先的 new Thread()
- 修正异常打印方法 e.printStackTrace() 为 Logger 记录
- 补充核心类的 Javadoc 注释